--- a/visual-test.html
+++ b/visual-test.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flexi-Flags Visual Test - Real SVG Files</title>
+    <title>flexy-flag Visual Test - Real SVG Files</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -122,7 +122,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>🏁 Flexi-Flags Visual Test - Real SVG Files</h1>
+      <h1>🏁 flexy-flag Visual Test - Real SVG Files</h1>
 
       <div class="stats">
         <h3>📊 Package Statistics</h3>
